# Niyebe

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: NiyebeConfig.h  NiyebeConfig.h.in  ascii_characters.h  encryption.h  niyebe.h
installer/: README.md
installer/config/: config.xml
src/: encryption.cpp  main.cpp  niyebe.cpp
